REGRESSION(r152313): Links in certain twitter postings don't warp correctly on page https://bugs.webkit.org/show_bug.cgi?id=118435

Reviewed by David Hyatt.

When we find an empty inline in the middle of the word, prefer breaking it before
instead of after to match other browsers' rendering.

Source/WebCore:

Test: fast/text/whitespace/inline-whitespace-wrapping-12.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::canBreakAtThisPosition):

LayoutTests:

* fast/text/whitespace/inline-whitespace-wrapping-12-expected.html: Added.
* fast/text/whitespace/inline-whitespace-wrapping-12.html: Added.


Canonical link: https://commits.webkit.org/136857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153061 268f45cc-cd09-0410-ab3c-d52691b4dbfc